css/style.css
body {
	background-color: #EEEEEE;
}

#header {
	position:fixed;
	top:15;
}

#unreadMsg {
	background-color: #CCCCFF;
	font-family: Monospace;
	font-size:120%;
	margin-left:0;
	margin-right:calc(100% - 195px);
	position:fixed;
	top:100;
}

#unreadMsg em{
	font-size:130%;	
}

/* Frame w/ scrollbar? */
#msgContainer {
	background-color: #FFFFFF;
	margin-left:200;
	margin-right:0;
	text-align:left;
}

#footer {
	font-size:smaller;
	text-align:left;
    vertical-align:sub;
	position:fixed;
	bottom:10;
}

